# zegraphql-gen

./: README.md
updated-rest/: Dockerfile  api.py  pyproject.toml
updated-rest/actions/: zenotify_client.py
updated-rest/business/: __init__.py  documents_model.py  documents_schema.py  industries_model.py  industries_schema.py  summary_tasks_model.py  summary_tasks_schema.py
updated-rest/core/: __init__.py  base_model.py  constants.py  custom_exceptions.py  depends.py  encrypt_str.py  files_model.py  logger.py  manager.py  query.py  user_model.py
updated-rest/routes/: documents.py  industries.py  summary_tasks.py
zegraphql/: api.py  pyproject.toml
zegraphql-genrator/versions/0.1/: manifest.yaml
zegraphql-genrator/versions/0.1/templates/zegraphql/: api.py.mako  pyproject.toml  pyproject.toml.mako
zegraphql-genrator/versions/0.1/templates/zegraphql/actions/: action_event.mako  zenotify_client.py
zegraphql-genrator/versions/0.1/templates/zegraphql/business/: types.mako
zegraphql-genrator/versions/0.1/templates/zegraphql/business/db_models/: model.mako
zegraphql-genrator/versions/0.1/templates/zegraphql/business/mutations/: __init__.mako  mutation.mako
zegraphql-genrator/versions/0.1/templates/zegraphql/business/queries/: __init__.mako  query.mako
zegraphql-genrator/versions/0.1/templates/zegraphql/core/: __init__.py  auth.py  base_model.py  constants.py  custom_exceptions.py  db_config.py  manager.py
zegraphql/business/: types.py
zegraphql/business/db_models/: documents_model.py  industries_model.py
zegraphql/core/: depends.py
(+12 files in other folders)
